updated to host

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <h3 class="h3">How to run</h3>
             <p>Open this folder in a local web server (recommended), or open the HTML file directly.</p>
             <p class="mono">python3 -m http.server 5173</p>
-            <p class="muted">Then open: http://localhost:5173/web/</p>
+            <p class="muted">Then open: http://localhost:5173/</p>
           </div>
         </div>
       </div>
